# neovim

./: .asan-blacklist  .busted  .cirrus.yml  .clang-format  .clang-tidy  .clangd  .codecov.yml  .dockerignore  .editorconfig  .emmyrc.json  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .lua-format  .luacheckrc  .luacov  .luarc.json  .mailmap  .mergify.yml  .stylua.toml  .stylua2.toml  .styluaignore  .travis.yml  .tsan-suppress  .valgrind.supp  .vimspector.json  .ycm_extra_conf.py  AGENTS.md  ARCHITECTURE.md  BACKERS.md  BRANCH_TODO.md  BSDmakefile  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  (+79 more)
cmake.deps/: CMakeLists.txt  CMakePresets.json  deps.txt
cmake.deps/cmake/: BuildGettext.cmake  BuildGhostty.cmake  BuildLibiconv.cmake  BuildLibtermkey.cmake  BuildLibuv.cmake  BuildLibvterm.cmake  BuildLpeg.cmake  BuildLua.cmake  BuildLuajit.cmake  BuildLuarocks.cmake  BuildLuv.cmake  BuildMsgpack.cmake  BuildTreesitter.cmake  BuildTreesitterParsers.cmake  BuildUTF8proc.cmake  BuildUnibilium.cmake  BuildWasmtime.cmake  CopyFilesGlob.cmake  GetBinaryDeps.cmake  GettextCMakeLists.txt  LibiconvCMakeLists.txt  LibtermkeyCMakeLists.txt  Libvterm-tbl2inc_c.cmake  LibvtermCMakeLists.txt  LpegCMakeLists.txt  MarkdownParserCMakeLists.txt  Patch.cmake  PatchLibuvEmscripten.cmake  RemoveFiles.cmake  TreesitterCMakeLists.txt  TreesitterParserCMakeLists.txt  UnibiliumCMakeLists.txt  libtermkeyCMakeLists.txt
cmake.deps/patches/: libuv-disable-shared.patch
src/: .asan-blacklist  .clang-format  .luacheckrc  .luarc.json  .tsan-suppressions  .valgrind.supp  CMakeLists.txt  Doxyfile  api.c  api.h  arabic.c  arabic.c.generated.h  arabic.h  arabic.h.generated.h  ascii.h  bit.c  bit.h  blowfish.c  blowfish.h  buffer.c  buffer.c.generated.h  buffer.h  buffer.h.generated.h  buffer_defs.h  build_lua.zig  charset.c  charset.c.generated.h  charset.h  charset.h.generated.h  clint.lua  clint.py  coverity-model.c  crypt.c  crypt.h  cursor_shape.c  cursor_shape.h  cursor_shape.h.generated.h  diff.c  diff.c.generated.h  diff.h  (+250 more)
src/api/: buffer.c  buffer.h  defs.h  helpers.c  helpers.h  tabpage.c  tabpage.h  vim.c  vim.h  window.c  window.h
src/cjson/: fpconv.c  fpconv.h  lua_cjson.c  lua_cjson.h  strbuf.c  strbuf.h
src/http_parser/: http_parser.c  http_parser.h
src/hunspell/: hunspell_wrapper.cpp  hunspell_wrapper.h
src/klib/: khash.h  klist.h  kvec.h
src/lib/: klist.h
src/man/: Makefile  nvim.1
src/mpack/: LICENSE-MIT  conv.c  conv.h  core.c  lmpack.c  lmpack.h  mpack_core.c  mpack_core.h  object.c  object.h  rpc.c  rpc.h
src/nvim/: .screen.c.swn  0001-patch-8.0.0749-some-unicode-digraphs-are-hard-to-rem.patch  CMakeLists.txt  README.md  arabic.c  arabic.h  arabic_defs.h  arglist.c  arglist.h  arglist_defs.h  ascii.h  ascii_defs.h  assert.h  assert_defs.h  aucmd.c  aucmd.h  auevents.lua  autocmd.c  autocmd.h  autocmd_defs.h  backup_utils.c  backup_utils.h  base64.c  base64.h  blowfish.c  blowfish.h  breakcheck.c  breakcheck.h  buffer.c  buffer.h  buffer_defs.h  buffer_updates.c  buffer_updates.h  bufhl_defs.h  bufwrite.c  bufwrite.h  change.c  change.h  channel.c  channel.h  (+372 more)
src/os/: env.c  env.h.generated.h  event.c  event.c.generated.h  event.h  event.h.generated.h  event_defs.h  fs.c  fs.c.generated.h  fs.h.generated.h  input.c  input.c.generated.h  input.h  input.h.generated.h  io.c  io.h  job.c  job.c.generated.h  job.h  job.h.generated.h  job_defs.h  mem.c  mem.h.generated.h  msgpack_rpc.c  msgpack_rpc.h  os.c  os.h  rstream.c  rstream.c.generated.h  rstream.h  rstream.h.generated.h  rstream_defs.h  shell.c  shell.c.generated.h  shell.h  shell.h.generated.h  signal.c  signal.c.generated.h  signal.h  signal.h.generated.h  (+10 more)
src/po/: Makefile  af.po  ca.po  check.vim  cs.cp1250.po  cs.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  ga.po  it.po  ja.euc-jp.po  ja.po  ja.sjis.po  ko.UTF-8.po  ko.po  nb.po  nl.po  no.po  pl.UTF-8.po  pl.cp1250.po  pl.po  pt_BR.po  ru.cp1251.po  ru.po  sjiscorr.c  sjiscorr.h.generated.h  sk.cp1250.po  sk.po  sv.po  uk.cp1251.po  uk.po  vi.po  zh_CN.UTF-8.po  zh_CN.cp936.po  zh_CN.po  zh_TW.UTF-8.po  (+1 more)
src/proto/: blowfish.pro  buffer.pro  charset.pro  diff.pro  digraph.pro  edit.pro  eval.pro  ex_cmds.pro  ex_cmds2.pro  ex_docmd.pro  ex_eval.pro  ex_getln.pro  fileio.pro  fold.pro  getchar.pro  hangulin.pro  hardcopy.pro  hashtab.pro  if_cscope.pro  main.pro  mark.pro  mbyte.pro  memfile.pro  memline.pro  menu.pro  message.pro  misc1.pro  misc2.pro  move.pro  normal.pro  ops.pro  option.pro  os_unix.pro  popupmnu.pro  quickfix.pro  regexp.pro  screen.pro  search.pro  sha256.pro  spell.pro  (+7 more)
src/sds/: LICENSE  sds.c  sds.h  sdsalloc.h
src/tee/: CMakeLists.txt  tee.c
src/termkey/: driver-csi.c  driver-ti.c  termkey-internal.h  termkey.c  termkey.h
src/testdir/: Makefile  dotest.in  test10.in  test101.ok  test104.in  test104.ok  test105.in  test105.ok  test106.ok  test10a.in  test10a.ok  test11.ok  test12.in  test13.in  test13.ok  test15.in  test15.ok  test17.in  test17.ok  test18.in  test18.ok  test19.in  test19.ok  test2.in  test20.ok  test21.ok  test22.ok  test23.in  test24.ok  test26.in  test27.in  test27.ok  test28.in  test29.ok  test3.in  test3.ok  test30.in  test30.ok  test31.in  test31.ok  (+89 more)
src/tree_sitter/: LICENSE  README.md  alloc.h  api.h  array.h  atomic.h  bits.h  clock.h  error_costs.h  get_changed_ranges.c  get_changed_ranges.h  language.c  language.h  length.h  lexer.c  lexer.h  lib.c  node.c  parser.c  parser.h  point.h  query.c  reduce_action.h  reusable_node.h  stack.c  stack.h  subtree.c  subtree.h  tree.c  tree.h  tree_cursor.c  tree_cursor.h  treesitter_commit_hash.txt  unicode.h  utf16.c  utf16.h
src/unicode/: CaseFolding.txt  Copyright.txt  EastAsianWidth.txt  UnicodeData.txt  emoji-data.txt
test/: .emmyrc.json  .luacheckrc  .luarc.json  CMakeLists.txt  README.md  _meta.lua  assert.lua  busted_runner.lua  deprecated.lua  format_string.lua  harness.lua  helpers.lua  lua_runner.lua  luassert.lua  preload.lua  reporter.lua  run_tests.zig  runner.lua  testutil.lua
(+6522 files in other folders)
